[backend] refine detailed result api
