# dsa-backend/docs/swagger.json
@@ -1189,12 +1189,21 @@
                 },
                 "user_id": {
                     "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
                 }
             }
         },
         "problem.DetailedTaskLog": {
             "type": "object",
             "properties": {
+                "command": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
                 "exit_code": {
                     "type": "integer"
                 },
@@ -1205,11 +1214,15 @@
                     "type": "integer"
                 },
                 "stderr": {
-                    "description": "base64 encoded",
+                    "description": "base64 encoded, compressed with gzip",
+                    "type": "string"
+                },
+                "stdin": {
+                    "description": "base64 encoded, compressed with gzip",
                     "type": "string"
                 },
                 "stdout": {
-                    "description": "base64 encoded",
+                    "description": "base64 encoded, compressed with gzip",
                     "type": "string"
                 },
                 "test_case_id": {
